# duckdb

./: .clang-format  CMakeLists.txt  Makefile  analyze.py
extension/extension_api/: CMakeLists.txt  extension-api.cpp
extension/extension_api/include/: extension_api_extension.hpp
tools/jdbc/: CMakeLists.txt  build.gradle  settings.gradle
tools/jdbc/app/: build.gradle
tools/jdbc/app/src/main/: AndroidManifest.xml
tools/jdbc/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
tools/jdbc/app/src/main/java/org/duckdb/: Compat.java  DuckDBDatabaseMetaData.java  DuckDBPreparedStatement.java  DuckDBResultSetMetaData.java  DuckDBTimestamp.java
tools/jdbc/app/src/main/java/org/duckdb/duckdb_jdbc/: Extension.java  ExtensionArrayAdapter.java  JNIInterface.java  MainActivity.java  Util.java
tools/jdbc/app/src/main/res/layout/: activity_main.xml  result_item.xml
tools/jdbc/app/src/main/res/values/: strings.xml
tools/jdbc/app/src/test/java/org/duckdb/duckdb_jdbc/: ExampleUnitTest.java
tools/jdbc/duckdb_jdbc_android/src/androidTest/java/org/duckdb/duckdb_jdbc/: ExampleInstrumentedTest.java
tools/jdbc/duckdb_jdbc_android/src/main/java/org/duckdb/: Compat.java  DuckDBDatabaseMetaData.java  DuckDBNative.java  DuckDBPreparedStatement.java  DuckDBResultSet.java  DuckDBResultSetMetaData.java  DuckDBTimestamp.java  DuckDBVector.java
tools/jdbc/duckdb_jdbc_android/src/test/java/org/duckdb/duckdb_jdbc/: ExampleUnitTest.java
tools/jdbc/duckdbdemo/: build.gradle
tools/jdbc/duckdbdemo/src/androidTest/java/org/duckdb/duckdbdemo/: ExampleInstrumentedTest.kt
tools/jdbc/duckdbdemo/src/main/: AndroidManifest.xml
tools/jdbc/duckdbdemo/src/main/java/org/duckdb/duckdbdemo/: MainActivity.kt  Util.java  (+1 more)
tools/jdbc/duckdbdemo/src/main/res/layout/: activity_main.xml
tools/jdbc/duckdbdemo/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
tools/jdbc/duckdbdemo/src/main/res/values-night/: themes.xml
tools/jdbc/gradle/wrapper/: gradle-wrapper.properties
tools/jdbc/src/jni/: duckdb_java.cpp
tools/jdbc/src/main/: AndroidManifest.xml
tools/jdbc/src/main/java/org/duckdb/: DuckDBAppender.java  DuckDBArray.java  DuckDBColumnType.java  DuckDBConnection.java  DuckDBDatabaseMetaData.java  DuckDBNative.java  DuckDBPreparedStatement.java  DuckDBResultSet.java  DuckDBResultSetMetaData.java  DuckDBStruct.java  DuckDBTimestamp.java  DuckDBVector.java  JdbcUtils.java  StatementReturnType.java
tools/jdbc/src/main/java/org/duckdb/exceptions/: BinderException.java  CastException.java  CatalogException.java  ConnectionException.java  ConstraintException.java  ConversionException.java  DataError.java  Error.java  Exceptions.java  FatalException.java  HTTPException.java  IOException.java  IntegrityError.java  InternalError.java  InternalException.java  InterruptException.java  InvalidInputException.java  InvalidTypeException.java  NotImplementedException.java  NotSupportedError.java  OperationalError.java  OutOfMemoryException.java  OutOfRangeException.java  ParserException.java  PermissionException.java  ProgrammingError.java  SequenceException.java  SerializationException.java  StandardException.java  SyntaxException.java  TransactionException.java  TypeMismatchException.java  ValueOutOfRangeException.java
tools/jdbc/src/test/java/org/duckdb/: TestDuckDBJDBC.java
tools/jdbc/src/test/java/org/duckdb/test/: MapBuilder.java  TestDuckDBJDBC.java
tools/pythonpkg/: .gitignore  cibw.toml  create_extension_package.py  duckdb_python.cpp  meson.build  pyproject.toml  requirements-dev.txt  rewrite.py  setup.py
tools/pythonpkg/duckdb-stubs/: __init__.pyi
tools/pythonpkg/duckdb/experimental/spark/sql/: type_utils.py
tools/pythonpkg/scripts/: cache_data.json  get_cpp_methods.py  imports.py  optional_requirements.py
tools/pythonpkg/src/: dataframe.cpp  pyconnection.cpp  pyfilesystem.cpp  pyrelation.cpp  pyresult.cpp
tools/pythonpkg/src/include/duckdb_python/: connection_wrapper.hpp  pyconnection.hpp  pyrelation.hpp  pyresult.hpp  python_objects.hpp
tools/pythonpkg/src/include/duckdb_python/import_cache/: python_import_cache.hpp  python_import_cache_modules.hpp
tools/pythonpkg/src/include/duckdb_python/import_cache/modules/: logging_module.hpp  types_module.hpp  typing_module.hpp
tools/pythonpkg/src/include/duckdb_python/pyconnection/: pyconnection.hpp
tools/pythonpkg/src/pandas/: scan.cpp
tools/pythonpkg/src/pyduckdb/: connection_wrapper.cpp
tools/pythonpkg/src/typing/: pytype.cpp
tools/pythonpkg/tests/: .libcst.codemod.yaml  conftest.py  fix_pandas.py
tools/pythonpkg/tests/extensions/: test_httpfs.py
tools/pythonpkg/tests/extensions/json/: test_read_json.py
tools/pythonpkg/tests/fast/: test_all_types.py  test_ambiguous_prepare.py  test_case_alias.py  test_memory_leaks.py  test_non_default_conn.py  test_parquet.py  test_relation.py  test_transaction.py  test_type.py  test_unicode.py  test_union.py
tools/pythonpkg/tests/fast/api/: test_attribute_getter.py  test_dbapi09.py  test_dbapi10.py  test_dbapi12.py  test_dbapi13.py  test_duckdb_connection.py  test_insert_into.py  test_to_csv.py  test_to_parquet.py
tools/pythonpkg/tests/fast/arrow/: parquet_write_roundtrip.py  test_5547.py  test_arrow_batch_index.py  test_arrow_replacement_scan.py  test_arrow_run_end_encoding.py  test_date.py  test_filter_pushdown.py  test_interval.py  test_nested_arrow.py  test_time.py  test_timestamps.py
tools/pythonpkg/tests/fast/pandas/: test_bug2281.py  test_date_as_datetime.py  test_implicit_pandas_scan.py  test_pandas_category.py  test_pandas_df_none.py  test_pandas_enum.py  test_pandas_limit.py  test_pandas_object.py  test_pandas_string.py  test_pandas_timestamp.py  test_pandas_types.py  test_pandas_update.py  test_partitioned_pandas_scan.py  test_progress_bar.py  test_same_name.py  test_stride.py  test_timedelta.py  test_timestamp.py
tools/pythonpkg/tests/fast/spark/: test_spark_dataframe.py  test_spark_to_csv.py
tools/pythonpkg/tests/fast/types/: test_decimal.py  test_hugeint.py
tools/pythonpkg/tests/fast/udf/: test_scalar_arrow.py  test_scalar_native.py
(+187 files in other folders)
